[package]
name = "accessbot"
version = "0.1.0"
authors = ["Brian King <brian.king@adhoc.team>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
rand = "0.7.3"
